--- a/templates/officer/governor_profile_claim.html.twig
+++ b/templates/officer/governor_profile_claim.html.twig
@@ -11,16 +11,19 @@
             <img class="img-fluid shadow mb-4" src="{{ asset(profileClaimImage) }}" alt="governor profile claim" />
 
             <div class="mt-3">
-            {% if claim.user.isKingdomMember %}
-                <button class="btn btn-success disabled float-left">Kingdom Access Granted</button>
-            {% else %}
-                <a class="btn btn-outline-warning float-left" href="{{ path('make_kingdom_member', {id: claim.user.id, redirect_to_claim: claim.id}) }}">
-                    Grant Kingdom Access
+                {% if claim.user.isKingdomMember %}
+                    <button class="btn btn-success disabled float-left">Kingdom Access Granted</button>
+                {% else %}
+                    <a class="btn btn-outline-warning float-left" href="{{ path('make_kingdom_member', {id: claim.user.id, redirect_to_claim: claim.id}) }}">
+                        Grant Kingdom Access
+                    </a>
+                {% endif %}
+                <a class="btn btn-outline-danger float-right" href="{{ path('close_claim', {id: claim.id}) }}">
+                    Close Claim
                 </a>
-            {% endif %}
-            <a class="btn btn-outline-danger float-right" href="{{ path('close_claim', {id: claim.id}) }}">
-                Close Claim
-            </a>
+                <a class="btn btn-outline-warning float-right mr-3" href="{{ path('claim_mark_gov_missing', {id: claim.id}) }}">
+                    Governor Missing
+                </a>
             </div>
         </div>
     </div>
