--- a/templates/officer/governor_profile_claim.html.twig
+++ b/templates/officer/governor_profile_claim.html.twig
@@ -11,13 +11,15 @@
             <img class="img-fluid shadow mb-4" src="{{ asset(profileClaimImage) }}" alt="governor profile claim" />
 
             <div class="mt-3">
-{#                {% if claim.user.isKingdomMember %}#}
-{#                    <button class="btn btn-success disabled float-left">Kingdom Access Granted</button>#}
-{#                {% else %}#}
-{#                    <a class="btn btn-outline-warning float-left" href="{{ path('make_kingdom_member', {id: claim.user.id, redirect_to_claim: claim.id}) }}">#}
-{#                        Grant Kingdom Access#}
-{#                    </a>#}
-{#                {% endif %}#}
+                {% if is_granted(constant('App\\Entity\\Role::ROLE_ADMIN')) %}
+                    {% if claim.user.isKingdomMember %}
+                        <button class="btn btn-success disabled float-left">Kingdom Access Granted</button>
+                    {% else %}
+                        <a class="btn btn-outline-warning float-left" href="{{ path('make_kingdom_member', {id: claim.user.id, redirect_to_claim: claim.id}) }}">
+                            Grant Kingdom Access
+                        </a>
+                    {% endif %}
+                {% endif %}
             </div>
         </div>
     </div>
