--- a/templates/governor/edit_note.html.twig
+++ b/templates/governor/edit_note.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="card">
     <div class="card-header">
-        <h4>Add Officer Note for {{ gov.name }}</h4>
+        <h4>Officer Note for {{ gov.name }}</h4>
     </div>
     <div class="card-body">
         {{ form_start(form) }}
