--- a/templates/scribe/detail.html.twig
+++ b/templates/scribe/detail.html.twig
@@ -12,60 +12,18 @@
     <div class="card-body container">
         <div class="row p-2 mb-3">
             <span class="font-weight-bold pl-2">Filter: </span>
-            <a href="{{ path('scribe_snapshot_detail', {'snapshotUid': snapshotInfo.uid}) }}" class="btn btn-outline-primary btn-sm ml-3">
+            <a href="{{ path('scribe_snapshot_detail', {'snapshotUid': snapshotInfo.uid}) }}" class="btn btn-{% if alliance %}outline-{% endif %}primary btn-sm ml-3">
                 All
             </a>
-            {% for alliance in snapshotInfo.alliances %}
-                <a href="?alliance={{ alliance.id }}" class="btn btn-outline-primary btn-sm ml-3">
-                    {{ alliance.tag }}
+            {% for filterAlliance in snapshotInfo.alliances %}
+                <a href="?alliance={{ filterAlliance.id }}" class="btn btn-{% if alliance != filterAlliance.id %}outline-{% endif %}primary btn-sm ml-3">
+                    {{ filterAlliance.tag }}
                 </a>
             {% endfor %}
         </div>
         <div class="row">
-            <div class="col-sm">
-                <table class="table table-striped table-bordered">
-                    <thead>
-                    <tr>
-                        <th scope="col">Completed</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                        {% for govSnapshot in snapshotInfo.completedGovSnapshots %}
-                            <tr>
-                                <td>
-                                    {{ govSnapshot.governor.name }}
-                                    <a
-                                        href="{{ path('scribe_gov_snapshot_edit', { id: govSnapshot.id }) }}?snapshot={{ snapshotInfo.uid }}"
-                                        class="btn btn-outline-secondary btn-sm px-1 py-0"
-                                    >Edit</a>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-sm">
-                <table class="table table-striped table-bordered">
-                    <thead>
-                    <tr>
-                        <th scope="col">Incomplete</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for govSnapshot in snapshotInfo.incompleteGovSnapshots %}
-                        <tr>
-                            <td>
-                                {{ govSnapshot.governor.name }}
-                                <a
-                                        href="{{ path('scribe_gov_snapshot_edit', { id: govSnapshot.id }) }}?snapshot={{ snapshotInfo.uid }}"
-                                        class="btn btn-outline-secondary btn-sm px-1 py-0"
-                                >Edit</a>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+            {% include 'scribe/detail_gov_list.html.twig' with({title: 'Completed', snapshotInfo: snapshotInfo, govSnapshots: snapshotInfo.completedGovSnapshots, alliance:alliance}) only %}
+            {% include 'scribe/detail_gov_list.html.twig' with({title: 'Incomplete', snapshotInfo: snapshotInfo, govSnapshots: snapshotInfo.incompleteGovSnapshots, alliance:alliance}) only %}
             <div class="col-sm">
                 <table class="table table-striped table-bordered">
                     <thead>
@@ -79,7 +37,7 @@
                             <td>
                                 {{ governor.name }}
                                 <a
-                                    href="{{ path('scribe_gov_snapshot_create', { govId: governor.id, snapshotUid: snapshotInfo.uid }) }}?snapshot={{ snapshotInfo.uid }}"
+                                    href="{{ path('scribe_gov_snapshot_create', { govId: governor.id, snapshotUid: snapshotInfo.uid }) }}?snapshot={{ snapshotInfo.uid }}&alliance={{ alliance }}"
                                     class="btn btn-outline-secondary btn-sm px-1 py-0"
                                 >Create</a>
                             </td>
