--- a/templates/governor/edit_commanders.html.twig
+++ b/templates/governor/edit_commanders.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Edit Commanders{% endblock %}
 {% block page_title %}Edit Commanders{% endblock %}
 
 {% block body %}
