--- a/templates/governor/edit_note.html.twig
+++ b/templates/governor/edit_note.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Edit Officer Note{% endblock %}
 {% block user_login %}{% endblock %}
 
 {% block body %}
