--- a/templates/governor/index.html.twig
+++ b/templates/governor/index.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Governor | {{ gov.name }} | {{ gov.governorId }}{% endblock %}
 {% block page_title %}{% endblock %}
 
 {% block body %}
