--- a/templates/import/configure_import.html.twig
+++ b/templates/import/configure_import.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Configure Import{% endblock %}
 {% block page_title %}{% endblock %}
 
 {% block body %}
