--- a/templates/import/create_import.html.twig
+++ b/templates/import/create_import.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Create Import{% endblock %}
 {% block page_title %}Create Import{% endblock %}
 
 {% block body %}
