--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,10 +1,11 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Kingdom Management{% endblock %}
+{% block page_title %}{% endblock %}
+
 {% block user_login %}{% endblock %}
 
 {% block hero_class %}large{% endblock %}
-
-{% block page_title %}{% endblock %}
 
 {% block body %}
     <div class="welcome">
