--- a/templates/index_anon.html.twig
+++ b/templates/index_anon.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Welcome{% endblock %}
 {% block page_title %}Thanks for your interest!{% endblock %}
 
 {% block body %}
