--- a/templates/officer/commander_search.html.twig
+++ b/templates/officer/commander_search.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Commander Search{% endblock %}
 {% block page_title %}Commander Search{% endblock %}
 
 {% block body %}
