--- a/templates/officer/governor_profile_claims.html.twig
+++ b/templates/officer/governor_profile_claims.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Profile Claims{% endblock %}
 {% block page_title %}Profile Claims{% endblock %}
 
 {% block body %}
