--- a/templates/officer/index.html.twig
+++ b/templates/officer/index.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Officers{% endblock %}
 {% block page_title %}Officer Corner{% endblock %}
 
 {% block body %}
