--- a/templates/scribe/detail.html.twig
+++ b/templates/scribe/detail.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Snapshot | {{ snapshotInfo.name }}{% endblock %}
+
 {% block body %}
 <div class="card mb-3 shadow-sm">
     <div class="card-header">
