--- a/templates/scribe/edit_gov_snapshot.html.twig
+++ b/templates/scribe/edit_gov_snapshot.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Gov Snapshot | {{ govSnapshot.governor.governorId }}{% endblock %}
 {% block page_title %}Edit Governor Snapshot{% endblock %}
 
 {% block body %}
