--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>{% block title %}{{ site_title }}{% endblock %}</title>
+        <title>{% block title %}{% endblock %} | {{ site_title }}</title>
 
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
