--- a/templates/officer/governor_profile_claim.html.twig
+++ b/templates/officer/governor_profile_claim.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Profile Claim{% endblock %}
 {% block page_title %}{% endblock %}
 
 {% block body %}
