--- a/templates/scribe/index.html.twig
+++ b/templates/scribe/index.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Scribes{% endblock %}
 {% block page_title %}Scribe Corner{% endblock %}
 
 {% block body %}
