--- a/templates/export/index.html.twig
+++ b/templates/export/index.html.twig
@@ -1,40 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block page_title %}Export Governor Data{% endblock %}
+{% block page_title %}{% endblock %}
 
 {% block body %}
     <div class="card mb-4 shadow-sm">
         <div class="card-header pb-0">
-            <h3>Filters</h3>
+            <h3>Exports</h3>
         </div>
-        <div class="card-body pb-0">
-            {% if exportError %}
-            <div class="text-danger mb-3">
-                {{ exportError }}
-            </div>
-            {% endif %}
-            {{ form_start(form) }}
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    {{ form_label(form.alliance, null, {'label_attr': {'class': 'input-group-text'}}) }}
-                </div>
-                {{ form_widget(form.alliance) }}
-            </div>
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    {{ form_label(form.snapshot, null, {'label_attr': {'class': 'input-group-text'}}) }}
-                </div>
-                {{ form_widget(form.snapshot) }}
-            </div>
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    {{ form_label(form.govStatus, null, {'label_attr': {'class': 'input-group-text'}}) }}
-                </div>
-                {{ form_widget(form.govStatus) }}
-            </div>
+        <div class="card-body">
+            <a class="btn btn-primary" href="{{ path('export_gov_data') }}">Export Governor Data</a>
+            <a class="btn btn-primary ml-2" href="{{ path('export_commander_data') }}">Export Commanders</a>
         </div>
     </div>
-
-    {{ form_widget(form.export, {'attr': {'class': 'btn btn-primary'}}) }}
-    {{ form_end(form) }}
 {% endblock %}
