add equipment tier

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -5,6 +5,11 @@ $hero-text: #FFFFFF;
 
 $expertise: #EFE459;
 
+$tier-legendary: #ffe74a;
+$tier-epic: rgba(186, 89, 239, 0.75);
+$tier-elite: #59c0ef;
+$tier-advanced: rgba(89, 239, 131, 0.76);
+
 $status-active: #00A388;
 $status-inactive: #EEEEEE;
 $status-blacklisted: #FF4444;
