--- a/templates/export/index.html.twig
+++ b/templates/export/index.html.twig
@@ -10,6 +10,7 @@
         <div class="card-body">
             <a class="btn btn-primary" href="{{ path('export_gov_data') }}">Export Governor Data</a>
             <a class="btn btn-primary ml-2" href="{{ path('export_commander_data') }}">Export Commanders</a>
+            <a class="btn btn-primary ml-2" href="{{ path('export_equipment_data') }}">Export Equipment</a>
         </div>
     </div>
 {% endblock %}
