add vip to gov snapshot

--- a/templates/search/gov_pills.html.twig
+++ b/templates/search/gov_pills.html.twig
@@ -2,6 +2,9 @@
     <span class="pill-label">Power</span> {{ gov.power|custom_nf }}
 </div>
 <div class="search-pill pill-border">
+    <span class="pill-label">VIP</span> {{ gov.vip|custom_nf }}
+</div>
+<div class="search-pill pill-border">
     <span class="pill-label">Kills</span> {{ gov.kills|custom_nf }}
 </div>
 <div class="search-pill pill-border">
