--- a/templates/search/gov_pills_expanded.html.twig
+++ b/templates/search/gov_pills_expanded.html.twig
@@ -7,7 +7,13 @@
             <span class="pill-label">Highest Power</span> {{ gov.highestPower|custom_nf }}
         </div>
         <div class="search-pill pill-border">
+            <span class="pill-label">VIP</span> {{ gov.vip }}
+        </div>
+        <div class="search-pill pill-border">
             <span class="pill-label">Kills</span> {{ gov.kills|custom_nf }}
+        </div>
+        <div class="search-pill pill-border">
+            <span class="pill-label">Deads</span> {{ gov.deads|custom_nf }}
         </div>
     </div>
 
@@ -30,9 +36,6 @@
     </div>
 
     <div class="row">
-        <div class="search-pill pill-border">
-            <span class="pill-label">Deads</span> {{ gov.deads|custom_nf }}
-        </div>
         <div class="search-pill pill-border">
             <span class="pill-label">Helps</span> {{ gov.helps|custom_nf }}
         </div>
